fix(button-icon): default --buton-icon-gap to 0

--- a/manon/button-icon-variables.scss
+++ b/manon/button-icon-variables.scss
@@ -12,4 +12,5 @@
   );
   @include button.link-button-styling-variables("button-icon-", "button-base-");
   --button-icon-font-size: 0;
+  --button-icon-gap: 0;
 }
